# fb2-manager

./: .gitignore  pyproject.toml
fb2manager/: book.py  cli.py  input_handler.py
formatter/: Cargo.toml
formatter/src/: lib.rs
src/: book.py  cli.py  input_handler.py  metadata_extractor.py  metadata_reader.py  template_handler.py
